1st profile upload

--- a/index.html
+++ b/index.html
@@ -1,1 +1,214 @@
-Hello Elise
+<html>
+
+<head>
+  <meta charset="utf-8" />
+  <title> Nick Dousset | Portfolio & Blog </title>
+  <link rel="icon" type="image/png" href="frissa.png" />
+  <link rel="stylesheet" href="css/styles.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Raleway|Shrikhand|Old+Standard+TT|Merriweather|Roboto+Slab|Anonymous+Pro" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script type="text/javascript" src="stickynav.js"></script>
+</head>
+
+<body>
+  <header>
+    <div class="subtitle-top">
+      <h2> From Project Manager Sydney </h2>
+    </div>
+    <!-- subtitle-top div -->
+    <h1 id="title"> Nick Dousset </h1>
+    <div class="subtitle-bottom">
+
+      <h2> To  Web Developer  Berlin </h2>
+      <!-- subtitle-bottom div -->
+    </div>
+  </header>
+
+  <div id="page1">
+    <div class="space">
+    </div>
+    <nav class="main-nav">
+      <div class="nav-container" class="container">
+        <a href="#top"> Home </a>
+        <a href="#page2"> About </a>
+        <a href="#page2.5"> Web Development </a>
+        <a href="#page4"> Contact  </a>
+      </div>
+    </nav>
+    <!-- close of navbar -->
+
+
+  </div>
+  <!-- close page1 -->
+
+  <div class="container" id="page2">
+    <div class="heading-space">
+      <h2 class="heading"> About </h2>
+    </div>
+
+    <div id="bio">
+      <p>
+        Through immersing myself in the thriving Berlin Tech scene I'm transitioning from a profession based around managing and organising others, to a position where I'm engineering, building and creating myself.
+      </p>
+      <div class='profilepic'>
+        <img id="profile" class="img-responsive" src="http://s21.postimg.org/olhgd6gt3/Ndousset.jpg" </img>
+      </div>
+
+      <p>
+        I'm optimistic, appreciate good design and love exploring. I've been curious about website, application and program development for some time, especially the innovation and creativity it encourages. I'm really enjoying being a part of the tech community
+        and am inspired by the industry's perpetual pursuit of improvement and progression.
+      </p>
+
+    </div>
+    <!-- close bio -->
+  </div>
+  <!-- close page2 -->
+
+
+</div>
+
+
+  <div class="container" id="page2.5">
+    <div align="center" class="heading-space">
+      <h2 id="webdevelopmentheading" class="heading"> Web Development </h2>
+    </div>
+
+<div class="container" id="page3">
+  <nav class="webDevNav">
+    <ul>
+      <li><a href="#">What I've Done</a>
+        <ul>
+          <li><a href="#"> Courses </a>
+            <ul>
+              <li><a href="#"> Front End Dev Certification <br> <span class="italic"> FreeCodeCamp </span> </a> </li>
+              <li><a href="#"> Basic Javascript <br><span class="italic">  FreeCodeCamp</span>  </a> </li>
+              <li><a href="#"> Javascript Fundamentals <br><span class="italic"> Codecademy</span>  </a> </li>
+              <li><a href="#"> JQuery <br><span class="italic">  Codecademy</span>  </a> </li>
+              <li><a href="#"> Learn Git <br> <span class="italic"> Codecademy </span> </a> </li>
+            </ul>
+          </li>
+          <li><a href="#"> Static Webpages </a>
+            <ul>
+              <li><a href="https://codepen.io/ndousset/full/JRVOap/" target="_blank"> Friskee - Mixed Ultimate Australia Website </a></li>
+            </ul>
+          </li>
+          <li><a href="#"> Tool Practice </a>
+            <ul>
+              <li><a href="http://codepen.io/ndousset/full/LbYQxd/" target="_blank"> Mouse Animation  </a></li>
+              <li><a href="http://codepen.io/ndousset/full/ObLYEV/" target="_blank"> Comment Box  </a></li>
+
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <li><a href="#">What I'm Doing</a>
+        <ul>
+          <li><a href="#"> Code Everyday  </a> </li>
+          <li><a href="#"> Weekly HTML/CSS study Group </a> </li>
+          <li><a href="#"> Coding Workshops </a> </li>
+          <li><a href="#"> Tech Talks </a> </li>
+        </ul>
+      </li>
+      <li><a href="#">Pipeline</a>
+        <ul>
+          <li><a href="#"> Short Term </a>
+            <ul>
+              <li><a href="#"> Web Development Internship</a></li>
+              <li><a href="#"> Keep creating more complex websites</a></li>
+              <li><a href="#"> Create a blog from scratch using GitHub &  Jekyll</a></li>
+
+            </ul>
+          </li>
+          <li><a href="#"> Mid Term </a>
+            <ul>
+              <li><a href="#"> Study basic statistics </a></li>
+              <li><a href="#"> Explore Data visualisation </a></li>
+              <li><a href="#"> Study Design Principles </a></li>
+              <li><a href="#"> Explore App development </a></li>
+            </ul>
+          </li>
+
+          <li><a href="#"> Longer Term</a>
+            <ul>
+              <li><a href="#">Full time Web Developer </a></li>
+              <li><a href="#"> Launch an app </a></li>
+              <li><a href="#"> Keep exloring the world </a></li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
+
+</div>
+  <!-- close page3 -->
+
+  <div class="container" id="page4">
+    <div align="center" class=heading-space>
+    <h2 id="contactheading" class="heading"> Contact </h2>
+</div>
+
+<div id="contactsubtitle">
+  <p> Get in touch! Lets talk tech, design, UX or Ultimate Frisbee  </p>
+</div>
+
+<div id="contactcontent">
+  <div class="contentform">
+
+  <form>
+    <label>
+      <input id="name" type="text" name="name" placeholder="Name" />
+    </label>
+
+    <label>
+       <input id="email" name="email" type="email" placeholder="E-mail" />
+    </label>
+
+    <label>
+        <input id="subject" name="subject" type="text" placeholder="Subject" />
+    </label>
+
+    <label>
+    <textarea id="Message" name="Message" placeholder="Message"> </textarea>
+
+    <input class="formButton" type="button" value="Send" />
+    </label>
+
+  </form>
+</div>
+
+  <div id="socialmedia">
+    <ul>
+      <li> <i class="fa fa-map-marker"></i> <em> Berlin, Germany <li>
+        <br>
+      <li><i class="fa fa-linkedin"></i> <em> Linkedin Profile </li>
+        <br>
+      <li> <i class="fa fa-envelope"></i> <em> Nick.Dousset@gmail.com </li>
+        <br>
+      <li><i class="fa fa-twitter"></i> <em>  @Nick_Dousset </li>
+    </ul>
+  </div>
+
+  </div>
+</div>
+  <!-- close page4 -->
+
+<footer>
+  <nav class="nav icon-set">
+    <div class="container">
+        <ul class="nav navbar-nav">
+            <li> Nick Dousset </li>
+            <li> 2016 </li>
+            <li><a href="https://de.linkedin.com/in/nicholas-dousset-68014041" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="#page4"><i class="fa fa-envelope"></i></a></li>
+            <li><a href="https://twitter.com/Nick_Dousset" ><i class="fa fa-twitter"></i></a></li>
+        </ul>
+    </div>
+    </nav>
+</footer>
+
+
+</body>
+
+</html>
