--- a/index.html
+++ b/index.html
@@ -26,15 +26,12 @@
   </header>
 
   <div id="page1">
-    <div class="space">
-    </div>
-    <nav class="main-nav">
-      <div class="nav-container" class="container">
+
+    <nav class="main-nav nav-container container">
         <a href="#top"> Home </a>
         <a href="#page2"> About </a>
         <a href="#page2.5"> Web Development </a>
         <a href="#page4"> Contact  </a>
-      </div>
     </nav>
     <!-- close of navbar -->
 
@@ -179,14 +176,14 @@
 </div>
 
   <div id="socialmedia">
-    <ul>
-      <li> <i class="fa fa-map-marker"></i> <em> Berlin, Germany <li>
+    <ul id="contacticons">
+      <li> <i class="fa fa-map-marker"></i>  Berlin, Germany <li>
         <br>
-      <li><i class="fa fa-linkedin"></i> <em> Linkedin Profile </li>
+      <li> <i class="fa fa-linkedin"></i> Linkedin Profile </li>
         <br>
-      <li> <i class="fa fa-envelope"></i> <em> Nick.Dousset@gmail.com </li>
+      <li> <i class="fa fa-envelope"></i>  Nick.Dousset@gmail.com </li>
         <br>
-      <li><i class="fa fa-twitter"></i> <em>  @Nick_Dousset </li>
+      <li><i class="fa fa-twitter"></i>   @Nick_Dousset </li>
     </ul>
   </div>
 
