--- a/index.html
+++ b/index.html
@@ -26,15 +26,12 @@
   </header>
 
   <div id="page1">
-    <div class="space">
-    </div>
-    <nav class="main-nav">
-      <div class="nav-container" class="container">
+
+    <nav class="main-nav nav-container container">
         <a href="#top"> Home </a>
         <a href="#page2"> About </a>
-        <a href="#page2.5"> Web Development </a>
-        <a href="#page4"> Contact  </a>
-      </div>
+        <a href="#page2.5"> Goals </a>
+        <a href="#page4"> Web Dev Notes </a>
     </nav>
     <!-- close of navbar -->
 
@@ -54,10 +51,8 @@
       <div class='profilepic'>
         <img id="profile" class="img-responsive" src="http://s21.postimg.org/olhgd6gt3/Ndousset.jpg" </img>
       </div>
-
       <p>
-        I'm optimistic, appreciate good design and love exploring. I've been curious about website, application and program development for some time, especially the innovation and creativity it encourages. I'm really enjoying being a part of the tech community
-        and am inspired by the industry's perpetual pursuit of improvement and progression.
+        I've created this website to track my progress and goals while sharing my 'Web Dev Notes' with the community. All feedback, advice and suggestions are eagerly welcome.
       </p>
 
     </div>
@@ -71,7 +66,7 @@
 
   <div class="container" id="page2.5">
     <div align="center" class="heading-space">
-      <h2 id="webdevelopmentheading" class="heading"> Web Development </h2>
+      <h2 id="webdevelopmentheading" class="heading"> Goals </h2>
     </div>
 
 <div class="container" id="page3">
@@ -97,14 +92,14 @@
             <ul>
               <li><a href="http://codepen.io/ndousset/full/LbYQxd/" target="_blank"> Mouse Animation  </a></li>
               <li><a href="http://codepen.io/ndousset/full/ObLYEV/" target="_blank"> Comment Box  </a></li>
-
+              <li><a href="http://codepen.io/ndousset/full/PbJNQJ/" target="_blank"> Contact Form  </a></li>
             </ul>
           </li>
         </ul>
       </li>
       <li><a href="#">What I'm Doing</a>
         <ul>
-          <li><a href="#"> Code Everyday  </a> </li>
+          <li><a href="#"> Web Dev Internship </a> </li>
           <li><a href="#"> Weekly HTML/CSS study Group </a> </li>
           <li><a href="#"> Coding Workshops </a> </li>
           <li><a href="#"> Tech Talks </a> </li>
@@ -114,7 +109,7 @@
         <ul>
           <li><a href="#"> Short Term </a>
             <ul>
-              <li><a href="#"> Web Development Internship</a></li>
+              <li><a href="#"> Regularly share 'Web Dev Notes'</a></li>
               <li><a href="#"> Keep creating more complex websites</a></li>
               <li><a href="#"> Create a blog from scratch using GitHub &  Jekyll</a></li>
 
@@ -145,66 +140,27 @@
   <!-- close page3 -->
 
   <div class="container" id="page4">
+
     <div align="center" class=heading-space>
-    <h2 id="contactheading" class="heading"> Contact </h2>
+    <h2 id="contactheading" class="heading"> Web Dev Notes </h2>
 </div>
 
-<div id="contactsubtitle">
-  <p> Get in touch! Lets talk tech, design, UX or Ultimate Frisbee  </p>
 </div>
+<!-- close page4 -->
 
-<div id="contactcontent">
-  <div class="contentform">
 
-  <form>
-    <label>
-      <input id="name" type="text" name="name" placeholder="Name" />
-    </label>
-
-    <label>
-       <input id="email" name="email" type="email" placeholder="E-mail" />
-    </label>
-
-    <label>
-        <input id="subject" name="subject" type="text" placeholder="Subject" />
-    </label>
-
-    <label>
-    <textarea id="Message" name="Message" placeholder="Message"> </textarea>
-
-    <input class="formButton" type="button" value="Send" />
-    </label>
-
-  </form>
-</div>
-
-  <div id="socialmedia">
-    <ul>
-      <li> <i class="fa fa-map-marker"></i> <em> Berlin, Germany <li>
-        <br>
-      <li><i class="fa fa-linkedin"></i> <em> Linkedin Profile </li>
-        <br>
-      <li> <i class="fa fa-envelope"></i> <em> Nick.Dousset@gmail.com </li>
-        <br>
-      <li><i class="fa fa-twitter"></i> <em>  @Nick_Dousset </li>
-    </ul>
-  </div>
-
-  </div>
-</div>
-  <!-- close page4 -->
 
 <footer>
   <nav class="nav icon-set">
-    <div class="container">
         <ul class="nav navbar-nav">
-            <li> Nick Dousset </li>
-            <li> 2016 </li>
+          <li> Nick Dousset </li>
+          <li> 2016 </li>
+        <span> </span>
+            <li> Get in touch! Lets talk tech, design, development and compare notes" </li>
             <li><a href="https://de.linkedin.com/in/nicholas-dousset-68014041" target="_blank"><i class="fa fa-linkedin"></i></a></li>
             <li><a href="#page4"><i class="fa fa-envelope"></i></a></li>
-            <li><a href="https://twitter.com/Nick_Dousset" ><i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://twitter.com/Nick_Dousset" target="_blank"><i class="fa fa-twitter"></i></a></li>
         </ul>
-    </div>
     </nav>
 </footer>
 
