--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title> Nick Dousset | Portfolio & Blog </title>
+  <title> Nick Dousset's Web Dev Notes</title>
   <link rel="icon" type="image/png" href="frissa.png" />
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
@@ -29,8 +29,8 @@
 
     <nav class="main-nav nav-container container">
         <a href="#top"> Home </a>
-        <a href="#page2"> About </a>
-        <a href="#page2.5"> Goals </a>
+        <a href="#about"> About </a>
+        <a href="#goals"> Goals </a>
         <a href="#page4"> Web Dev Notes </a>
     </nav>
     <!-- close of navbar -->
@@ -39,7 +39,7 @@
   </div>
   <!-- close page1 -->
 
-  <div class="container" id="page2">
+  <div class="container" id="about">
     <div class="heading-space">
       <h2 class="heading"> About </h2>
     </div>
@@ -64,7 +64,7 @@
 </div>
 
 
-  <div class="container" id="page2.5">
+  <div class="container" id="goals">
     <div align="center" class="heading-space">
       <h2 id="webdevelopmentheading" class="heading"> Goals </h2>
     </div>
@@ -139,7 +139,7 @@
 </div>
   <!-- close page3 -->
 
-  <div class="container" id="page4">
+  <div class="container" id="webdevnotes">
 
     <div align="center" class=heading-space>
     <h2 id="contactheading" class="heading"> Web Dev Notes </h2>
@@ -155,8 +155,7 @@
         <ul class="nav navbar-nav">
           <li> Nick Dousset </li>
           <li> 2016 </li>
-        <span> </span>
-            <li> Get in touch! Lets talk tech, design, development and compare notes" </li>
+            <li> Get in touch! Lets talk tech, design, development and compare notes </li>
             <li><a href="https://de.linkedin.com/in/nicholas-dousset-68014041" target="_blank"><i class="fa fa-linkedin"></i></a></li>
             <li><a href="#page4"><i class="fa fa-envelope"></i></a></li>
             <li><a href="https://twitter.com/Nick_Dousset" target="_blank"><i class="fa fa-twitter"></i></a></li>
