add webdev notes

--- a/index.html
+++ b/index.html
@@ -12,26 +12,19 @@
 </head>
 
 <body>
-  <header>
-    <div class="subtitle-top">
-      <h2> From Project Manager Sydney </h2>
-    </div>
-    <!-- subtitle-top div -->
+  <header id="home" class="clearfix">
+      <h2 class="subtitle-top"> From Project Manager Sydney </h2>
     <h1 id="title"> Nick Dousset </h1>
-    <div class="subtitle-bottom">
-
-      <h2> To  Web Developer  Berlin </h2>
-      <!-- subtitle-bottom div -->
-    </div>
+      <h2 class="subtitle-bottom"> To Frontend Developer Berlin </h2>
   </header>
 
   <div id="page1">
 
     <nav class="main-nav nav-container container">
-        <a href="#top"> Home </a>
+        <a href="#home"> Home </a>
         <a href="#about"> About </a>
         <a href="#goals"> Goals </a>
-        <a href="#page4"> Web Dev Notes </a>
+        <a href="#WebDevNotes"> Web Dev Notes </a>
     </nav>
     <!-- close of navbar -->
 
@@ -39,7 +32,7 @@
   </div>
   <!-- close page1 -->
 
-  <div class="container" id="about">
+  <div id="about">
     <div class="heading-space">
       <h2 class="heading"> About </h2>
     </div>
@@ -52,7 +45,7 @@
         <img id="profile" class="img-responsive" src="http://s21.postimg.org/olhgd6gt3/Ndousset.jpg" </img>
       </div>
       <p>
-        I've created this website to track my progress and goals while sharing my 'Web Dev Notes' with the community. All feedback, advice and suggestions are eagerly welcome.
+        I've created this website with HTML, CSS & JavaScript to track my progress and goals while sharing my 'Web Dev Notes' with the community. All feedback, advice and suggestions are eagerly welcome.
       </p>
 
     </div>
@@ -109,24 +102,24 @@
         <ul>
           <li><a href="#"> Short Term </a>
             <ul>
-              <li><a href="#"> Regularly share 'Web Dev Notes'</a></li>
-              <li><a href="#"> Keep creating more complex websites</a></li>
-              <li><a href="#"> Create a blog from scratch using GitHub &  Jekyll</a></li>
+              <li><a href="#"> Create simple javascript application </a></li>
+              <li><a href="#"> Keep Developing this webpage </a></li>
+              <li><a href="#"> Document all notes </a></li>
 
             </ul>
           </li>
           <li><a href="#"> Mid Term </a>
             <ul>
-              <li><a href="#"> Study basic statistics </a></li>
-              <li><a href="#"> Explore Data visualisation </a></li>
+              <li><a href="#"> Angular 2  </a></li>
+              <li><a href="#"> jquery </a></li>
               <li><a href="#"> Study Design Principles </a></li>
-              <li><a href="#"> Explore App development </a></li>
+              <li><a href="#"> Data Visualisation </a></li>
             </ul>
           </li>
 
           <li><a href="#"> Longer Term</a>
             <ul>
-              <li><a href="#">Full time Web Developer </a></li>
+              <li><a href="#"> Full time Web Developer </a></li>
               <li><a href="#"> Launch an app </a></li>
               <li><a href="#"> Keep exloring the world </a></li>
             </ul>
@@ -139,13 +132,118 @@
 </div>
   <!-- close page3 -->
 
-  <div class="container" id="webdevnotes">
+    <div align="center" class="heading-space">
+    <h2 id="WebDevNotes" class="heading"> Web Dev Notes </h2>
+  </div> <!-- close heading space -->
 
-    <div align="center" class=heading-space>
-    <h2 id="contactheading" class="heading"> Web Dev Notes </h2>
+    <div class="webDevNotes">
+
+<div class="sidebar">
+<h2> Join the Study Group </h2>
+  <br></br>
+<p> Follow on twitter </p>
+<br></br>
+<p> Subscribe to Web Dev Notes </p>
+<h3> Test 1 - Javascript separate file  </h3>
+<p> didnt take while snippet </p>
+
+<form action="//github.us14.list-manage.com/subscribe/post?u=4714e89b4a6736eb5b3d1a0f8&amp;id=4e1bf8d953" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
+<input id="subscribe-text" type="email" value="your.email@address.com" name="EMAIL" class="required email" onfocus="this.value=''">
+<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="subscribe-button">
+</form>
+
+<h3> Test 2 - Javascript same file </h3>
+<!-- Begin MailChimp Signup Form -->
+<div id="mc_embed_signup">
+<form action="//github.us14.list-manage.com/subscribe/post?u=4714e89b4a6736eb5b3d1a0f8&amp;id=4e1bf8d953" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+
+<div class="mc-field-group">
+	<label for="mce-EMAIL">Email Address  </label>
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+	<div id="mce-responses" class="clear">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4714e89b4a6736eb5b3d1a0f8_4e1bf8d953" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
 </div>
 
+<!--End mc_embed_signup-->
+<h4 class="sidebarlistHeading"> Archive </h4>
+<ul id="sidebarlist">
+  <li> Welcome to Web-Dev Notes </li>
+  <li> Welcome to Web-Dev Notes </li>
+  <li> Welcome to Web-Dev Notes </li>
+  <li> Welcome to Web-Dev Notes </li>
+  <li> Welcome to Web-Dev Notes </li>
+  <li> Welcome to Web-Dev Notes </li>
+  <li> Welcome to Web-Dev Notes </li>
+  <li> Welcome to Web-Dev Notes </li>
+  <li> Welcome to Web-Dev Notes </li>
+  <li> Welcome to Web-Dev Notes </li>
+  <li> Welcome to Web-Dev Notes </li>
+</ul>
+
+
+</div> <!-- close sidebar -->
+
+
+<!-- close side bar -->
+
+<div class="articles">
+<div id="pageheading" >
+  <h1 class="topicheading">Project Manager <a> to </a> Frontend Developer </h1>
+  <div class="taglist">
+  <ul>
+    <li> <b> Categories: </b> </li>
+    <li> Thoughts </li>
+  </ul>
 </div>
+
+</div> <!-- close page heading -->
+
+<div class="topic">
+<h2 class="topicsubheading"> My Coding Story </h2>
+<p class="firstParagraph"> I felt accomplised and challenged as a Project Manager. I was managing other professionals', I understood the ins-and-outs of my projects, I was anticipating risks and solving problems.
+ I was a good at my job, but I was unsatisfied.</p>
+
+<p>  I had a nagging desire to create, design and 'do' something myself. Coding and app development had always been on my radar but I never seriously considered a career change into Tech. </p>
+
+<p>
+  In June 2016 I took the opportunity of represeting Australia at the Ultimate Frisbee World Championships in London to take a career break and extensively travel Eastern Europe.
+  </p>
+  <br><br>
+  <p class="quote"> *Quarter-life crisis in full swing* </p>
+  <br></br>
+<p>
+  While travelling, I entertained my curiosity in website, application and program development. In September 2016, I settled in Berlin and commited to learn the art and science of Web Developement with the impression that I would teach myself to code.
+ </p>
+<p> A few months down the particularly bumpy road I havn't looked back. The 'self taught path' is flexible and liberating but is only as structured as your selfcontrol; theres no assignment or exam pressure (which while isnt pleasureable, undoubtedly works), only your own motivation to make a little progress each day.  </p>
+
+<h2 class="topicsubheading"> Web Dev Notes </h2>
+  <p>
+ I made this website using HTML, CSS and javascript to track my progress and goals, practice the tools I learn and to share my 'Web Dev Notes' with the community. </p>
+ <p> My vision for 'Web Dev Notes' is to create a collection of tutorials, examples and notes as a reference for myself and others learning Web Development.
+  </p>
+
+  <p>
+    Please reach out if you want to talk: code, web-dev, design, my notes, flag any of the endless bugs on my site or ultimate frisbee!
+  </p>
+</div> <!-- close topic -->
+
+</div> <!-- close articles -->
+<div class="clear">
+</div> <!-- close clear -->
+</div> <!-- close web deb notes -->
+</div>
+</div>
+
+
+ 
 <!-- close page4 -->
 
 
@@ -153,9 +251,8 @@
 <footer>
   <nav class="nav icon-set">
         <ul class="nav navbar-nav">
-          <li> Nick Dousset </li>
-          <li> 2016 </li>
-            <li> Get in touch! Lets talk tech, design, development and compare notes </li>
+          <li id="leftalign"> Nick Dousset - 2016 </li>
+            <li> Let's compare notes </li>
             <li><a href="https://de.linkedin.com/in/nicholas-dousset-68014041" target="_blank"><i class="fa fa-linkedin"></i></a></li>
             <li><a href="#page4"><i class="fa fa-envelope"></i></a></li>
             <li><a href="https://twitter.com/Nick_Dousset" target="_blank"><i class="fa fa-twitter"></i></a></li>
