Media Query Upload

--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title> Nick Dousset's Web Dev Notes</title>
   <link rel="icon" type="image/png" href="frissa.png" />
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/mediaqs.css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Raleway|Shrikhand|Old+Standard+TT|Merriweather|Roboto+Slab|Anonymous+Pro" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script type="text/javascript" src="stickynav.js"></script>
-  <script type="text/javascript" src="fadeIn.js"></script>
+  <script type="text/javascript" src="fadeIn.js"<link rel="stylesheet" href="css/styles.css">></script>
   <script type="text/javascript" src="smoothScroll.js"></script>
 </head>
 
 <body>
   <header id="home" class="clearfix">
       <h2 class="subtitle-top"> From Project Manager Sydney </h2>
-    <h1 id="title"> Nick Dousset </h1>
+    <h1 class="title"> Nick Dousset </h1>
       <h2 class="subtitle-bottom"> To Frontend Developer Berlin </h2>
   </header>
 
@@ -70,6 +72,7 @@
       <div class='profilepic right'>
          <img id="profile" src="http://s21.postimg.org/olhgd6gt3/Ndousset.jpg" </img>
 
+      <div class="buttons">
          <button id=twitterbutton>
            <a href="https://twitter.com/Nick_Dousset" target="_blank">
            <i class="fa fa-twitter" aria-hidden="true"></i> Follow   </a>
@@ -84,7 +87,7 @@
              <a href="mailto:ndousset@hotmail.com" target="_blank">
              <i class="fa fa-envelope" aria-hidden="true"></i> Email   </a>
             </button>
-
+          </div> <!-- close buttons -->
        </div> <!-- close right -->
 
     </div>
@@ -148,7 +151,7 @@
               <li><a href="#"> Make this page mobile responsive </a></li>
             </ul>
           </li>
-          <li><a href="#"> Mid Term </a>
+          <li ><a href="#"> Mid Term </a>
             <ul>
               <li><a href="#"> Angular 2  </a></li>
               <li><a href="#"> Study Design Principles </a></li>
